[project]
name = "intervaltree"
version = "0.1.0"
description = "Same intervaltree but with uv lib."
readme = "README.md"
authors = [
    { name = "Denis Bolshakov", email = "dreu007@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "sortedcontainers>=2.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
